--- a/style.css
+++ b/style.css
@@ -85,3 +85,59 @@ button {
     justify-content: center;
     align-items: center;
 }
+
+/* Hero */
+/* Right-cont */
+.txt-v{
+    background-color: #262626;
+  }
+  .fin{
+    color: #CAFF33;
+  }
+  .txt-w{
+    color: #E4E4E7;
+  }
+  .btn-open{
+    color: #1C1C1C;
+    background-color: #CAFF33;
+  }
+  .btn-open:hover{
+    background-color: white;
+  }
+  /* end or Right-cont */
+  
+  /* left-cont */
+    .left-cont{
+      background: url(../icons/home_icon/multi_arrows.png);
+      background-position-x: calc(16.5rem);
+      background-position-y: calc(4.9rem);
+      background-size: calc(15rem);
+      background-repeat: no-repeat;
+    }
+  
+    .details{
+      border: solid 0.87px;
+      border-radius: 10.4px;
+      width: 85%;
+      background-color: #1A1A1A;
+    }
+  
+    .top-cont{
+      margin-bottom: -24px;
+      margin-left: -42px;
+      position: sticky;
+      /* top: 2rem;
+      left: -2.5rem; */
+      background-color:#22251B;
+      width: fit-content;
+    }
+  
+    .c-t{
+      background-color: #CAFF33;
+      height: 33px;
+      width: 33px;
+    }
+  
+    .n-mo{
+      font-size: 15px;
+    }
