--- a/style.css
+++ b/style.css
@@ -204,3 +204,61 @@ button {
           margin-left: -6px;
         }   
       }
+
+      /* end of left-cont */
+
+/* Section-1 */
+.box{
+    border-color: #262626 !important;
+  }
+  
+  .btn-cont{
+    background-color:#1A1A1A; 
+    border:1px solid; 
+    border-color: #262626;
+  }
+  
+  .btn-cont-b{
+    background: none;
+  }
+  
+  .btn-cont-b:hover{
+    background-color: #CAFF33;
+    color: black;
+  }
+  
+  /* end of section-1 */
+  
+  /* Section-2 */
+  .l-cont{
+    background-color: #1C1C1C;
+  }
+  
+  .bxr{
+    background-color:#1A1A1A; 
+    border:1px solid; 
+    border-color: #262626;
+  }
+  
+  .btn-learn{
+    background-color: #262626;
+    border-color: #1C1C1C;
+  }
+  
+  .btn-learn:hover{
+    background-color: #262626;
+    border-color: #4b4242;
+  }
+  
+  .bd-r{
+    border-width: 2px !important;
+    border-color: #262626 !important;
+    border-right-style: dashed !important;
+    border-bottom-style: dashed !important;
+  }
+  
+  .bdx{
+    border-width: 2px !important;
+    border-color: #262626 !important;
+    border-bottom-style: dashed !important;
+  }
