--- a/style.css
+++ b/style.css
@@ -310,3 +310,60 @@ button {
   left: 11%;
   top: 12%;
   }
+
+  .slash::after{
+    content: "";
+    display: block;
+    width: 90px;
+    height: 0.11px;
+    background: #262626;
+    position: absolute;
+    right: 11%;
+    top: 12%;
+    }
+    .swiper-slide{
+    height: 350px !important;
+    }
+    
+    @media only screen and  (max-width: 1000px) {
+    #bold {
+      padding: 0px 20px;
+    }
+    
+    .background{
+    width: 100%;
+    margin: auto;
+    padding: 30px 20px ;
+    }
+    
+    #Testimonials{
+    text-align: center;
+    width: 100%;
+    }
+    .swiper-slide{
+      border: 1px solid #1C1C1C;
+    width: 95% !important;
+    }
+    .swipernav{
+      justify-content: center;
+      position: relative;
+      bottom: -70%;
+      margin: 30px 0px;
+      gap: 20px;
+    }
+    .swipernav>div{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(180deg, rgba(202, 255, 51, 0.05) 0%, rgba(202, 255, 51, 0.00) 100%);
+      width: 50px !important;
+      height: 50px !important;
+    }
+    }
+    /* end of section-5 */
+    
+    /* Section-6 */
+    .bx{
+      background-color: #262626;
+    }
+    /* end of section-6 */
