--- a/styles/about.css
+++ b/styles/about.css
@@ -100,3 +100,29 @@ body{
       bottom: 1.5rem;
     }
   }
+
+
+  .footer-border-col {
+    border: 1px solid #262626;
+  }
+  .social-bg-col {
+    background: #CAFF33;
+    height: 43px;
+    width: 43px;
+  }
+  
+   
+    @media  (min-width: 768px) and (max-width: 1024px) {
+    
+      .welcome-image {
+        width: 100%;
+      }
+      .welcome-text {
+        border-radius: 10px 10px 10px 10px;
+        position: relative;
+        left: 0rem;
+        bottom: 2.5rem;
+        height: 270px;
+        width: 100%;
+      }
+    }
