--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+body{
+  background-color: #1A1A1A;
+}
+
+
+/*
 body {
     width: 100%;
     height: 100%;
@@ -23,7 +29,6 @@ ul {
     list-style: none;
     color: inherit;
 }
-
 nav {
     width: 70%;
     height: 55px;
@@ -85,6 +90,7 @@ button {
     justify-content: center;
     align-items: center;
 }
+*/
 
 /* Hero */
 /* Right-cont */
