--- a/styles/login.css
+++ b/styles/login.css
@@ -13,7 +13,7 @@ body{
 /* 
  *  login section
  */
- 
+
 .log-into{
     background-blend-mode: overlay, normal;
     background-color: #000000ea;
@@ -56,5 +56,66 @@ body{
    
 .swiper-slide {
 height: 350px !important;
+}
+
+@media only screen and  (max-width: 1000px) {
+
+#bold {
+    padding: 0px 20px;
+}
+    
+.background{
+    width: 100%;
+    margin: auto;
+    padding: 30px 20px ;
+}
+    
+#Testimonials{
+    text-align: center;
+    width: 100%;
+}
+
+.swiper-slide{
+    border: 1px solid #1C1C1C;
+    width: 95% !important;
+}
+
+.swipernav{
+    justify-content: center;
+    position: relative;
+    bottom: -70%;
+    margin: 30px 0px;
+    gap: 20px;
+}
+    
+.swipernav>div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(180deg, rgba(202, 255, 51, 0.05) 0%, rgba(202, 255, 51, 0.00) 100%);
+    width: 50px !important;
+    height: 50px !important;
+}
+
+}
+
+/* 
+ *footer section
+ */
+
+footer {
+    background: #1C1C1C !important;
+}
+
+.footer-link {
+    color: white;
+    text-decoration: none;
+    border-radius: 82px;
+    padding: 5px 15px !important;
+}
+
+.footer-link:hover{
+    color: white;
+    background-color: #262626;
 }
    
