--- a/styles/career.css
+++ b/styles/career.css
@@ -8,3 +8,55 @@
 body {
     background-color:  #1A1A1A 
 }
+
+.value {
+    width: 90%;
+    gap: 220px;
+    padding: 30px;
+ }
+
+ .value-text {
+    color: #B3B3B3;
+ }
+
+
+ .second-value {
+    width: 90%;
+    margin-top: 120px;
+    gap: 220px;
+    padding: 30px;
+ }
+
+ 
+.right-value {
+    padding: 10px;
+}
+
+.h-value {
+    width: 900px;
+    color: #B3B3B3;
+}
+
+
+.p-value {
+    width: 360px;
+    line-height: 27px;
+}
+
+.benefits {
+    width: 90%;
+    margin-left: 1px;
+    gap: 150px;
+    padding: 20px;
+}
+
+.benefit-text {
+    width: 400px;
+}
+
+.job {
+    width: 90%;
+    margin-left: 1px;
+    gap: 60px;
+    padding: 20px;
+}
