--- a/styles/career.css
+++ b/styles/career.css
@@ -60,3 +60,36 @@ body {
     gap: 60px;
     padding: 20px;
 }
+
+.job-text {
+    width: 400px;
+}
+
+.opening {
+    padding: 5px;
+    border-radius: 80px;
+}
+
+.apply {
+    color: black;
+    background-color: #CAFF33;
+}
+
+.ask  {
+    width: 90%;
+    margin-left: 1px;
+    gap: 150px;
+    padding: 20px;
+}
+
+.ask-text {
+    width: 400px;
+}
+
+.faq-btn { 
+    margin-left: 420px;
+}
+
+.footer { 
+    background-color:  #1A1A1A 
+}
